k8s/front/front-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-lb
  labels:
    app: front
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
